--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 * {
   font-family: "Indie Flower", cursive;
-  background-color: #0069ff;
+  background-color: #e53a7f;
   color: #fff;
   text-align: center;
   font-size: 1.5em;
