--- a/style.css
+++ b/style.css
@@ -1,17 +1,67 @@
-@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
-* {
-  font-family: "Indie Flower", cursive;
-  background-color: #e53a7f;
-  color: #fff;
-  text-align: center;
-  font-size: 1.5em;
+*, *:before, *:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-p {
+
+html, body {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #000;
+  font-size: 62.5%;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+@media screen and (max-width: 520px) {
+  html, body {
+    /* don't know how to set default units to rem in mojs :(( */
+  }
+}
+
+.container {
+  width: 50rem;
+  height: 20rem;
+  position: relative;
+}
+
+.svg-container {
+  z-index: 2;
+  position: absolute;
+}
+
+.mo-container {
+  width: 100%;
+  height: 100%;
+}
+
+.line {
+  fill: none;
+  stroke: #FFFFFF;
+  stroke-width: 8;
+  stroke-linecap: round;
+  stroke-miterlimit: 10;
+}
+
+.lttr {
+  fill: #fff;
+}
+
+.sound {
   position: fixed;
-  padding-top: 10%;
-  left: 2;
-  font-size: 15px;
-  color: black;
-  font-family: arial;
-  opacity: 0.4;
+  color: #fff;
+  font-size: 1.6rem;
+  bottom: 1rem;
+  right: 1rem;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.sound--off {
+  text-decoration: line-through;
 }
